--- a/_posts/2016-03-22-ut-6-03x-lab-08.md
+++ b/_posts/2016-03-22-ut-6-03x-lab-08.md
@@ -194,7 +194,9 @@ void Delay(unsigned long ms) {
 
 ## **SIMULATOR TESTING:**
 
-<iframe width="720" height="405" src="https://www.youtube.com/embed/HWFSCjYy7gM?list=PLt_UZum7NVtnj_7WdI7Gp1cbeFg79-ami" frameborder="0" allowfullscreen></iframe>
+<div class="embedded-video">
+  <iframe width="720" height="405" src="https://www.youtube.com/embed/HWFSCjYy7gM?list=PLt_UZum7NVtnj_7WdI7Gp1cbeFg79-ami" frameborder="0" allowfullscreen></iframe>
+</div>
 
 ## **REAL-BOARD TESTING:**
 
