Apply Google's Prettify to all posts

--- a/_posts/2016-03-05-ut-6-03x-lab-04.md
+++ b/_posts/2016-03-05-ut-6-03x-lab-04.md
@@ -25,7 +25,7 @@ Note that to be able to run and grade the labs, you have to follow the [software
 
 For now, we put our code into one single file [main.c](). We will get to multiple .h and .c files later in this series.
 
-```c
+<pre class="prettyprint c-html linenums:1">
 /**
  * UTAustinX: UT.6.03x Embedded Systems - Shape the World
  * Lab 4: I/O
@@ -111,7 +111,8 @@ void PortFInit(void) {
     GPIO_PORTF_PUR_R  |= 0x11;           // enable pullup resistors on PF4, PF0
     GPIO_PORTF_DEN_R  |= 0x1F;           // 7) enable digital pins PF4-PF0
 }
-```
+
+</pre>
 
 ## **SIMULATOR TESTING:**
 
