--- a/_posts/2016-03-06-ut-6-03x-lab-05.md
+++ b/_posts/2016-03-06-ut-6-03x-lab-05.md
@@ -28,7 +28,7 @@ Note that to be able to run and grade the labs, you have to follow the [software
 
 See below for my code in main.c, or view the project folder on [my GitHub](https://github.com/philectron/ut-6-03x/tree/master/lab_05_functions_in_c).
 
-```c
+<pre class="prettyprint c-html linenums:1">
 /**
  * UTAustinX: UT.6.03x Embedded Systems - Shape the World
  * Lab 5: Functions in C
@@ -101,7 +101,8 @@ unsigned long Calculate_Area(unsigned long l, unsigned long w) {
     result = l * w;                                   // area = length * width
     return result;
 }
-```
+
+</pre>
 
 ## **SIMULATOR TESTING:**
 
