--- a/_posts/2016-03-07-ut-6-03x-lab-06.md
+++ b/_posts/2016-03-07-ut-6-03x-lab-06.md
@@ -28,7 +28,7 @@ First of all, here is the code that [initializes port F](https://gist.github.com
 
 Now, see below for my code in main.c, or view the project folder on [my GitHub](https://github.com/philectron/ut-6-03x/tree/master/lab_06_branching_function_delays).
 
-```c
+<pre class="prettyprint c-html linenums:1">
 /**
  * UTAustinX: UT.6.03x Embedded Systems - Shape the World
  * Lab 6: Branching Functions Delays
@@ -128,7 +128,8 @@ void Delay100ms(unsigned long time) {
         time--; // decrements every 100 ms
     }
 }
-```
+
+</pre>
 
 ## **SIMULATOR TESTING:**
 
