--- a/_posts/2016-03-09-ut-6-03x-lab-07.md
+++ b/_posts/2016-03-09-ut-6-03x-lab-07.md
@@ -41,9 +41,76 @@ Be careful, not to be confused this with **Programming Flow Chart**. Next, a big
 
 Note that to be able to run and grade the labs, you have to follow the [software requirements](https://github.com/philectron/ut-6-03x/blob/master/software_requirements.pdf). Unfortunately, the software and the course don't support Linux. However, if you follow the official instruction from [Texas Instruments](http://www.ti.com/ww/en/LaunchPad/software.html#tabs), you can upload and run your program on the LaunchPad.
 
-Because of the long program, I only include five subroutines from my [main.c](https://github.com/philectron/ut-6-03x/blob/master/lab_07_heart_block/main.c). [View my GitHub for the complete project folder](https://github.com/philectron/ut-6-03x/tree/master/lab_07_heart_block):
+Here's my [main.c](https://github.com/philectron/ut-6-03x/blob/master/lab_07_heart_block/main.c). [View my GitHub for the complete project folder](https://github.com/philectron/ut-6-03x/tree/master/lab_07_heart_block):
 
-```c
+<pre class="prettyprint c-html linenums:1">
+/**
+ * UTAustinX: UT.6.03x Embedded Systems - Shape the World
+ * Lab 7: Heart Block
+ *
+ * File Name: main.c
+ *
+ * Description:
+ *     SW1 is released: Green light turns on and waits
+ *     SW1 is held: Green light goes off
+ *     SW1 is released after being pressed: Red light goes on for 250ms,
+ *      then it turns off, and Green light turns on again.
+ *
+ * Compatibility: EK-TM4C123GXL
+ *
+ * Author: Phi Luu
+ * Location: Portland, Oregon, United States
+ * Created: March 09, 2016
+ * Updated: June 22, 2017
+ */
+
+#include "TExaS.h" // lab grader functions
+
+// Constant declarations to access port registers
+// using symbolic names instead of addresses
+#define GPIO_PORTF_DATA_R     (*((volatile unsigned long *)0x400253FC))
+#define GPIO_PORTF_DIR_R      (*((volatile unsigned long *)0x40025400))
+#define GPIO_PORTF_AFSEL_R    (*((volatile unsigned long *)0x40025420))
+#define GPIO_PORTF_PUR_R      (*((volatile unsigned long *)0x40025510))
+#define GPIO_PORTF_DEN_R      (*((volatile unsigned long *)0x4002551C))
+#define GPIO_PORTF_LOCK_R     (*((volatile unsigned long *)0x40025520))
+#define GPIO_PORTF_CR_R       (*((volatile unsigned long *)0x40025524))
+#define GPIO_PORTF_AMSEL_R    (*((volatile unsigned long *)0x40025528))
+#define GPIO_PORTF_PCTL_R     (*((volatile unsigned long *)0x4002552C))
+#define SYSCTL_RCGC2_R        (*((volatile unsigned long *)0x400FE108))
+
+// Function prototypes
+void PortFInit(void);             // port F initial function
+void Delay1ms(unsigned long msec); // delay function
+void EnableInterrupts(void);       // enable interrupts
+void WaitForAsLow(void);           // sensor-off waiting function
+void WaitForAsHigh(void);          // sensor-on waiting function
+void SetVt(void);                  // trigger setting function
+void ClearVt(void);                // trigger clearing function
+void SetReady(void);               // indicator setting function
+void ClearReady(void);             // indicator clearing function
+
+int  main(void) {
+    // Setup
+    // activate grader and set system clock to 80 MHz
+    TExaS_Init(SW_PIN_PF40, LED_PIN_PF31, ScopeOn);
+    PortFInit();       // port F initalization
+    EnableInterrupts(); // enable interrupts for the grader
+
+    // Loop
+    while (1) {
+        SetReady();      // ready signal goes high
+        WaitForAsHigh(); // wait for switch to be pressed
+        ClearReady();    // ready signal goes low
+        Delay1ms(10);    // wait 10ms
+        WaitForAsLow();  // wait for switch to be released
+        Delay1ms(250);   // wait 250ms
+        SetVt();         // trigger signal goes high
+        Delay1ms(250);   // wait 250ms
+        ClearVt();       // trigger signal goes low
+    }
+}
+
 /**
  * Initializes port F pins for input and output
  */
@@ -97,15 +164,21 @@ void SetVt(void) {
 void ClearVt(void) {
     GPIO_PORTF_DATA_R = 0; // turn the light off
 }
-```
 
-## **SIMULATOR TESTING:**
+/**
+ * Sets ready high and turns the green LED (PF3) on
+ */
+void SetReady(void) {
+    GPIO_PORTF_DATA_R = 0x08; // turn the green LED on
+}
 
-We need to implement the `delay()` function precisely. Why? This project simulates the pacemaker for the heart, so timing is critical. We don't want to mess up people's lives, so we must test the delay function on the logic analyzer before using it.
+/**
+ * Clears ready (all bits in port F)
+ */
+void ClearReady(void) {
+    GPIO_PORTF_DATA_R = 0; // turn the light off
+}
 
-- Write the function definition:
-
-```c
 /**
  * Delays in units of milliseconds
  *
@@ -125,7 +198,36 @@ void Delay1ms(unsigned long msec) {
         msec--;          // count down the number of milliseconds you want
     }
 }
-```
+
+</pre>
+
+## **SIMULATOR TESTING:**
+
+We need to implement the `delay()` function precisely. Why? This project simulates the pacemaker for the heart, so timing is critical. We don't want to mess up people's lives, so we must test the delay function on the logic analyzer before using it.
+
+- Write the function definition:
+
+<pre class="prettyprint c-html linenums:1">
+/**
+ * Delays in units of milliseconds
+ *
+ * @param  msec  number of milliseconds to delay
+ *
+ * @assumption   80-MHz clock
+ */
+void Delay1ms(unsigned long msec) {
+    unsigned long count; // declare count down variable
+
+    while (msec) {
+        count = 15913;   // 15913 for simulation and 11934 for the real board
+
+        while (count) {
+            count--;     // when counting down is finished, it takes 0.999875ms
+        }
+        msec--;          // count down the number of milliseconds you want
+    }
+}
+</pre>
 
 `msec` represents how many milliseconds the user wants the program to delay. But how do I get the number 15913 for `count`? I [use this](https://philectron.github.io/ti-launchpad/2016/03/24/a-glance-at-the-delay-function/) to calculate the value of `count` based on the clock speed and the cycles (which yields 16000), and then I test the function separately on the logic analyzer and find the best value for `count`.
 
