--- a/_posts/2016-04-16-ut-6-03x-lab-12.md
+++ b/_posts/2016-04-16-ut-6-03x-lab-12.md
@@ -67,7 +67,7 @@ Note that to be able to run and grade the labs, you have to follow the [software
 
 See below for my code, or [view it on my GitHub](https://github.com/philectron/ut-6-03x/tree/master/lab_12_tuning_fork).
 
-```c
+<pre class="prettyprint c-html linenums:1">
 /**
  * UTAustinX: UT.6.03x Embedded Systems - Shape the World
  * Lab 12: Tuning Fork
@@ -195,7 +195,8 @@ void InitSound(void) {
     NVIC_SYS_PRI3_R  &= 0x00FFFFFF;       // priority 0
     NVIC_ST_CTRL_R    = 0x07;             // enable with core clock and interrupts
 }
-```
+
+</pre>
 
 ## **SIMULATOR TESTING:**
 
