--- a/_posts/2016-04-22-ut-6-03x-lab-13.md
+++ b/_posts/2016-04-22-ut-6-03x-lab-13.md
@@ -104,7 +104,7 @@ Note that to be able to run and grade the labs, you have to follow the [software
 
 See below for my [dac.c](https://github.com/philectron/ut-6-03x/blob/master/lab_13_digital_analog_conversion/dac.c), or [view all lab files on my GitHub](https://github.com/philectron/ut-6-03x/tree/master/lab_13_digital_analog_conversion).
 
-```c
+<pre class="prettyprint c-html linenums:1">
 /**
  * UTAustinX: UT.6.03x Embedded Systems - Shape the World
  * Lab 13: Digital-Analog Conversion
@@ -152,7 +152,8 @@ void OutDac(unsigned long data) {
     // write every single value from the SineWave array
     GPIO_PORTB_DATA_R = data;
 }
-```
+
+</pre>
 
 ## **SIMULATOR TESTING:**
 
