--- a/_posts/2016-03-05-ut-6-03x-lab-02.md
+++ b/_posts/2016-03-05-ut-6-03x-lab-02.md
@@ -84,7 +84,7 @@ Note that to be able to run and grade the labs, you have to follow the [software
 
 We don't need to modify any lines of the code, but I did clean the code up. So, see below for my code, or view it on [my GitHub](https://github.com/philectron/ut-6-03x/tree/master/lab_02_hello_launchpad).
 
-```c
+<pre class="prettyprint c-html linenums:1">
 /**
  * UTAustinX: UT.6.03x Embedded Systems - Shape the World
  * Lab 2: Hello LaunchPad
@@ -194,7 +194,8 @@ void Delay(void) {
         time--;
     }
 }
-```
+
+</pre>
 
 ## **SIMULATOR TESTING:**
 
