--- a/_posts/2016-03-22-ut-6-03x-lab-08.md
+++ b/_posts/2016-03-22-ut-6-03x-lab-08.md
@@ -84,7 +84,7 @@ Note that to be able to run and grade the labs, you have to follow the [software
 
 See below for my full code, or view it on [my GitHub](https://github.com/philectron/ut-6-03x/tree/master/lab_08_switch_led_interface).
 
-```c
+<pre class="prettyprint c-html linenums:1">
 /**
  * UTAustinX: UT.6.03x Embedded Systems - Shape the World
  * Lab 8: Switch & LED Interface
@@ -190,7 +190,8 @@ void Delay(unsigned long ms) {
         ms--;
     }
 }
-```
+
+</pre>
 
 ## **SIMULATOR TESTING:**
 
