--- a/_posts/2016-03-25-ut-6-03x-lab-09.md
+++ b/_posts/2016-03-25-ut-6-03x-lab-09.md
@@ -48,7 +48,7 @@ For example, let's take 5000 as the initial value we write on `CURRENT` register
 Note that to be able to run and grade the labs, you have to follow the [software requirements](https://github.com/philectron/ut-6-03x/blob/master/software_requirements.pdf). Unfortunately, the software and the course don't support Linux. However, if you follow the official instruction from [Texas Instruments](http://www.ti.com/ww/en/LaunchPad/software.html#tabs), you can upload and run your program on the LaunchPad.
 
 See below for my code, or view it on [my GitHub](https://github.com/philectron/ut-6-03x/tree/master/lab_09_functional_debugging).
-```c
+<pre class="prettyprint c-html linenums:1">
 /**
  * UTAustinX: UT.6.03x Embedded Systems - Shape the World
  * Lab 9: Functional Debugging
@@ -176,7 +176,8 @@ void Delay(void) {
         count--;
     }
 }
-```
+
+</pre>
 
 ## **SIMULATOR TESTING:**
 
