--- a/_posts/2016-04-06-ut-6-03x-lab-11.md
+++ b/_posts/2016-04-06-ut-6-03x-lab-11.md
@@ -101,7 +101,7 @@ Recursion is a function that calls itself. For a recursion to work, we need:
 
 For example, to write a simple recursive program for calculating the factorial of n (n!):
 
-```c
+<pre class="prettyprint c-html linenums:1">
 unsigned long Factorial(unsigned long n) {
     // base case
     if (n == 1) {
@@ -110,7 +110,7 @@ unsigned long Factorial(unsigned long n) {
     // inductive step
     return (n * factorial(n - 1));
 }
-```
+</pre>
 
 ## **LAB 11:**
 
@@ -124,9 +124,9 @@ In lab 11, we will have fun with UART I/O and integer-string conversion. There a
 
 Note that to be able to run and grade the labs, you have to follow the [software requirements](https://github.com/philectron/ut-6-03x/blob/master/software_requirements.pdf). Unfortunately, the software and the course don't support Linux. However, if you follow the official instruction from [Texas Instruments](http://www.ti.com/ww/en/LaunchPad/software.html#tabs), you can upload and run your program on the LaunchPad.
 
-I made a function that converts a number into a string. Doing so helped me do better on `UART_ConvertUDec()` and `UART_ConvertDistance()`
+I created a function that converts a number into a string. Doing so helped me do better on `UART_ConvertUDec()` and `UART_ConvertDistance()`
 
-```c
+<pre class="prettyprint c-html linenums:1">
 /**
  * Puts number into global variable out_str[15]
  *
@@ -159,7 +159,7 @@ void PutIntoString(unsigned long n) {
         i++;
     }
 }
-```
+</pre>
 
 Since there are too many lines of codes, I think it would be easier to [view them on my GitHub](https://github.com/philectron/ut-6-03x/tree/master/lab_11_uart_serial_interface)
 
