--- a/_posts/2016-05-30-ut-6-03x-lab-14.md
+++ b/_posts/2016-05-30-ut-6-03x-lab-14.md
@@ -41,12 +41,12 @@ For example, \\( \Delta V = \frac{ Range }{ Precision } = \frac{ 3\;Volts\;-\;0\
 The first 5 steps are GPIO configuration. The next 6 steps are actually ADC initialization. In this lab, I'll use PE2 as the ADC port.
 
 1. **Enable the port clock**<br>
-  ```c
+  <pre class="prettyprint c-html linenums:1">
   SYSCTL_RCGC2_R    |= 0x10;
   delay              = SYSCTL_RCGC2_R;
   GPIO_PORTE_LOCK_R |= 0x4C4F434B;
   GPIO_PORTE_CR_R   |= 0x04;
-  ```
+  </pre>
 
 2. Make **input** by writing **zero** to the **DIR** register<br>
   `GPIO_PORTE_DIR_R &= ~0x04;`
@@ -61,10 +61,10 @@ The first 5 steps are GPIO configuration. The next 6 steps are actually ADC init
   `GPIO_PORTE_AMSEL_R |= 0x04;`
 
 6. **Enable** the **ADC** clock by setting **bit 16** of the `SYSCTL_RCGC0_R` register<br>
-  ```c
+  <pre class="prettyprint c-html linenums:1">
   SYSCTL_RCGC0_R |= 0x10000;
   delay           = SYSCTL_RCGC0_R;
-  ```
+  </pre>
 
 7. **Bits 8 and 9** of the `SYS_CTL_RCGC0_R` register specify the **maximum sampling rate** of the ADC. Configure the speed as the following:<br>
   0x03 ~> 1M samples/second<br>
@@ -166,7 +166,7 @@ Note that to be able to run and grade the labs, you have to follow the [software
 
 See below for my code in [adc.c](https://github.com/philectron/ut-6-03x/blob/master/lab_14_analog_digital_conversion/adc.c), or view all files of this lab on [my GitHub](https://github.com/philectron/ut-6-03x/tree/master/lab_14_analog_digital_conversion).
 
-```c
+<pre class="prettyprint c-html linenums:1">
 /**
  * UTAustinX: UT.6.03x Embedded Systems - Shape the World
  * Lab 14: Analog-Digital Conversion
@@ -234,7 +234,8 @@ unsigned long AdcChannel0In(void) {
     ADC0_ISC_R |= 0x08;                   // clear the flag to start capturing another sample
     return result;                        // return the value of result
 }
-```
+
+</pre>
 
 ## **SIMULATOR TESTING:**
 
