Remove reserved new line at EOF of code snippet.

--- a/_posts/2016-03-09-ut-6-03x-lab-07.md
+++ b/_posts/2016-03-09-ut-6-03x-lab-07.md
@@ -198,7 +198,6 @@ void Delay1ms(unsigned long msec) {
         msec--;          // count down the number of milliseconds you want
     }
 }
-
 </pre>
 
 ## **SIMULATOR TESTING:**
@@ -207,7 +206,7 @@ We need to implement the `delay()` function precisely. Why? This project simulat
 
 - Write the function definition:
 
-<pre class="prettyprint c-html linenums:1">
+<pre class="prettyprint c-html">
 /**
  * Delays in units of milliseconds
  *
