--- a/_posts/2016-04-06-ut-6-03x-lab-11.md
+++ b/_posts/2016-04-06-ut-6-03x-lab-11.md
@@ -101,7 +101,7 @@ Recursion is a function that calls itself. For a recursion to work, we need:
 
 For example, to write a simple recursive program for calculating the factorial of n (n!):
 
-<pre class="prettyprint c-html linenums:1">
+<pre class="prettyprint c-html">
 unsigned long Factorial(unsigned long n) {
     // base case
     if (n == 1) {
@@ -126,7 +126,7 @@ Note that to be able to run and grade the labs, you have to follow the [software
 
 I created a function that converts a number into a string. Doing so helped me do better on `UART_ConvertUDec()` and `UART_ConvertDistance()`
 
-<pre class="prettyprint c-html linenums:1">
+<pre class="prettyprint c-html linenums:149">
 /**
  * Puts number into global variable out_str[15]
  *
