Add line number property on all code snippets

--- a/_posts/2016-03-09-ut-6-03x-lab-07.md
+++ b/_posts/2016-03-09-ut-6-03x-lab-07.md
@@ -206,7 +206,7 @@ We need to implement the `delay()` function precisely. Why? This project simulat
 
 - Write the function definition:
 
-<pre class="prettyprint c-html">
+<pre class="prettyprint c-html linenums:1">
 /**
  * Delays in units of milliseconds
  *
