--- a/_posts/2016-03-31-ut-6-03x-lab-10.md
+++ b/_posts/2016-03-31-ut-6-03x-lab-10.md
@@ -44,7 +44,7 @@ We don't use PLL configuration in this lab, but it is good to know how to config
 
 Since the PLL changes the system clock to 80 MHz, each tick will take 12.5ns (or 12.5e-9 seconds or 1.25e-8 seconds) to complete. In order to write a standard SysTick delay function, add the following lines:
 
-<pre class="prettyprint c-html">
+<pre class="prettyprint c-html linenums:1">
 /**
  * Delays the program
  *
@@ -67,7 +67,7 @@ We would delay the program according to the value of delay: `delay = DELAY_TIME_
 
 For example, to delay 1ms (recommended), the delay value would equal to **80000**. Apply the standard delay function using SysTick timer, we can create a precise delay function by delay 1ms a number of times.
 
-<pre class="prettyprint c-html">
+<pre class="prettyprint c-html linenums:1">
 /**
  * Delays the program some milliseconds
  *
