--- a/_posts/2016-04-06-ut-6-03x-lab-11.md
+++ b/_posts/2016-04-06-ut-6-03x-lab-11.md
@@ -101,7 +101,7 @@ Recursion is a function that calls itself. For a recursion to work, we need:
 
 For example, to write a simple recursive program for calculating the factorial of n (n!):
 
-<pre class="prettyprint c-html">
+<pre class="prettyprint c-html linenums:1">
 unsigned long Factorial(unsigned long n) {
     // base case
     if (n == 1) {
